--- a/css/close-btn.less
+++ b/css/close-btn.less
@@ -99,3 +99,9 @@
 	.close-btn(48px);
 	:before { .close-btn-before(48px); }
 }
+
+.close-btn-red-20 {
+	.close-btn(20px);
+	background-color: #9f0909; //override
+	:before { .close-btn-before(20px); }
+}
