Firefox and legacy webkit rounded corner support

--- a/css/close-btn.less
+++ b/css/close-btn.less
@@ -20,6 +20,8 @@
 	// Appearance
 	background: #000 none;
 	border: (@width / 8.8) solid #fff;
+	-moz-border-radius: @width;
+	-webkit-border-radius: @width;
 	border-radius: @width;
 	@lo: @width / 6; //large shadow offset
 	@so: @width / 22; //small shadow offset
