--- a/css/close-btn.less
+++ b/css/close-btn.less
@@ -62,6 +62,7 @@
 	position: absolute; top: -0.1 * @btn_width; left: 0;
 	font-size: @btn_width;
 	line-height: @btn_width;
+	font-family: Consolas, "Helvetica Neue", Verdana, Tahoma, Calibri, Helvetica, Menlo, "Droid Sans", sans-serif;
 }
 
 .close-btn-18 {
